Genetically-encoded fluoresent probes of choice

--- a/_posts/Denoise.ai_NIS.ai/denoiseAI_and_nisAI.Rmd
+++ b/_posts/Denoise.ai_NIS.ai/denoiseAI_and_nisAI.Rmd
@@ -2,7 +2,7 @@
 title: "Denoise.ai"
 description: |
   New tool within NIS-Elements that apply trained convoluted neural networks to your images for the purpose of removing shot noise.
-draft: false
+draft: true
 author:
   - name: Mark Rigby 
     affiliation: Nikon Insturments UK
