Genetically-encoded fluoresent probes of choice 2

--- a/_posts/Genetically-encoded fluoresent probes of choice/Genetically-encoded fluoresent probes of choice.Rmd
+++ b/_posts/Genetically-encoded fluoresent probes of choice/Genetically-encoded fluoresent probes of choice.Rmd
@@ -4,7 +4,7 @@ categories:
   - Fluorescent probes
 description: |
   If I were a scientist designing a fluoresence-based imaging experiment, what probes what I choose?
-draft: true
+draft: false
 author:
   - name: Mark Rigby 
     affiliation: Nikon Insturments UK
