--- a/_posts/NIS-Elements stitching images/NIS-Elements stitching images.Rmd
+++ b/_posts/NIS-Elements stitching images/NIS-Elements stitching images.Rmd
@@ -10,7 +10,7 @@ author:
     affiliation: Nikon Insturments UK
     position: Advanced Imaging Specialist
     affiliation_url: https://www.microscope.healthcare.nikon.com/
-preview: images/system_information.png
+preview: images/preview.PNG
 date: "`r Sys.Date()`"
 output:
   distill::distill_article:
