--- a/_posts/Multi-colour STORM_SMLM/Multi-colour STORM_SMLM.Rmd
+++ b/_posts/Multi-colour STORM_SMLM/Multi-colour STORM_SMLM.Rmd
@@ -22,15 +22,14 @@ output:
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-An excellent place to start for those who wish to multi-colour STORM/SMLM experiments is the [detailed post](https://www.aicjanelia.org/post/multi-color-single-molecule-localization-microscopy) by Jesse Aaron at the AIC, Janelia Farm on how best to select probes for multi-color SMLM.
+An excellent place to start for those who wish to multi-colour STORM/SMLM experiments is the [detailed post](https://www.aicjanelia.org/post/multi-color-single-molecule-localization-microscopy) by Jesse Aaron at the AIC, Janelia Farm on how best to select probes for multi-colour SMLM.
 
 
-When I initially read this my feeling was that the best approach they suggested was to label one protein with Alexa-647, image, strip the sample of antibody labels using NH4CL, and then label a second protein with a Alexa-647 conjugated antibody. From what I gather no other dye provides anywhere near the localisation accuracy of Alexa-647. This method also removes the issue of bleaching fluorophores that are to be imaged second with the high laser powers required to image the first fluorophore.  
+When I initially read this my feeling was that the best approach they suggested was to label one protein with Alexa-647, image, strip the sample of antibody labels using NH4CL, and then label a second protein with a Alexa-647 conjugated antibody. From what I gather no other dye provides anywhere near the blinking characteristics for equivalent localisation accuracy of Alexa-647. This is also mirrored by the [Jimenez et al](https://www.biorxiv.org/content/10.1101/568295v3.full), in their SMLM methodological pre-print. The quenching and re-labelling strategy also removes the issue of bleaching fluorophores that are to be imaged second with the high laser powers required to image the first fluorophore.  
 
-Obviously, quenching and re-labeling takes time, and you need a very stable system to be sure the sample has not moved during quesnching, and labelling. Since I first read Jesse's post, I have come across a few other options, which provide more elegant solutions, and if proove viable should take much less time.
+Obviously, quenching and re-labelling takes time, and you need a very stable system to be sure the sample has not moved during this procedure. Since I first read Jesse's post, I have come across a few other options, which provide more elegant solutions, and if proove viable should take much less time.
 
 ## Co-label samples with Alexa 647 and CF 660. 
-
 Both probes can be excited by ~ 640 nm lasers, thereby avoiding issues of bleaching one-another. CF 660 also has excellent blinking properties to rival Alx 647. To separate their emission spectra, Platanova et al., use a 685 nm long pass dichroic, and image simultaneously onto 2 cameras. The technique is described in detail in the link below:
 
 https://doi.org/10.1021/acschembio.5b00046  
@@ -42,15 +41,25 @@ knitr::include_graphics("images/Alx647-CF660.PNG")
 
 ```
 
+Obviously, this method will require either 2 cameras, or a device to split the emission onto the same camera.
+
+
+## SaraFluor
+
+A blog post by [MicroscopyKarolinska](https://microscopykarolinska.se/2019/12/13/fluorophores-that-blink-for-storm-without-any-special-buffer/), suggests SaraFluor 650B and SaraFluor 488B-NHS from [Goryo chemical](https://goryochemical.com/en/product-series/sarafluor-series/) can be used for multi-colour SMLM. However, to date there are no independent reports to corroborate their suitability and blinking characteristics. It will be interesting to try them out.  
+
+
+From their product information, SaraFluor 650B and SaraFluor 488B-NHS require power densities of only 100 W/cm2 and 250W/cm2, respectively, well below the kW/cm2 power densities typically used to image single Alexa-647 molecules. The authors recommend not to use 405 nm laser as an activation laser, and both probes can be driven to a blink in PBS or other physiological buffer conditions without the need for redox conditions.   
+
 
 
 
 ## A simultaneous multiplexed variant of DNA-PAINT.   
 
-Usually DNA-PAINT experiments take ages because of all the separate perfusions required. However, by changing the length, and number of binding sites on DNA oligomers Ralf Jungmann's lab were able to  distunguish 124 different oligomer-bound proteins when applied simultaenously to the same sample.  
+Usually DNA-PAINT experiments take ages because of all the separate perfusions required. However, by changing the length, and number of binding sites on DNA oligomers Ralf Jungmann's lab were able to  distinguish 124 different oligomer-bound proteins when applied simultaneously to the same sample.  
 
 
-This was achieved using a very clever approach of designing oligomer's with different numbers of binding sites and different lengths to adjust the duration the oligomers bind to thier target. By designing oligomers for different targets with sufficiently different binding properties, Wade et al, were able to distnguish a vast number of different single moelcules. In their paper they conjugated their DNA oligomers to Cy3.  
+This was achieved using a very clever approach of designing oligomers with different numbers of binding sites and different lengths to adjust the duration the oligomers bind to their target. By designing oligomers for different targets with sufficiently different binding properties, Wade et al, were able to distinguish a vast number of different single molecules. In their paper they conjugated their DNA oligomers to Cy3.  
 https://doi.org/10.1021/acs.nanolett.9b00508
 
 ```{r, fig.cap =  "Designing oligomers with different binding sites and nucleotide lengths allow for targets to be distinguished by their blinking frequency and duration", layout="l-body-outset"}
@@ -60,7 +69,7 @@ knitr::include_graphics("images/multi-plexed_dna_oligomers.PNG")
 ```
 
 
-There is company called [Massive Photonics](https://www.massive-photonics.com/) based in Germany, which has now taken the mantle (previously held by Ultivue) to make dye-labeled DNA oligomers.
+There is company called [Massive Photonics](https://www.massive-photonics.com/) based in Germany, which has now taken the mantle (previously held by Ultivue) to make dye-labelled DNA oligomers.
 
 The multiplexed DNA-PAINT approach will no doubt be aided by the finding from a recent pre-print that using left-handed DNA oligomers, instead of the usually employed right-handed oligomers, markedly reduced the stickiness of DNA-PAINT probes, thereby increasing their specificity.  
 
@@ -71,6 +80,6 @@ https://www.biorxiv.org/content/10.1101/2020.03.28.010553v1
 
 Thanks to Dr Ben Compans currently at King's College London for making me aware of the Alexa647/CF660 paper.
 
-Preview image taken from "N-STORM with DNA-PAINT for Reliable Multicolor & 3D Single Molecule Localization Imaging" application note written by John R. Allen at Nikon in 2016. https://www.microscope.healthcare.nikon.com/products/super-resolution-microscopes/n-storm-super-resolution/application-notes
+Preview image taken from "N-STORM with DNA-PAINT for Reliable Multicolour & 3 Single Molecule Localization Imaging" application note written by John R. Allen at Nikon in 2016. https://www.microscope.healthcare.nikon.com/products/super-resolution-microscopes/n-storm-super-resolution/application-notes
 
 
